# baikal-ml

./: CHANGELOG.md  justfile  pyproject.toml
notebooks/: 1.01-zitrasa-prepare-indicators.ipynb  3.01-zitrasa-nlinear.ipynb
src/baikal/ml/torch/dataset/: __init__.py  arrow_time_series_batch.py  arrow_torch_dataset.py  mock_arrow_time_series_dataset.py  stride_window_strategy.py  structures.py  window_strategy.py
src/baikal/ml/torch/models/: __init__.py  n_linear_individual.py  n_linear_unified.py
src/baikal/ml/util/polars/: __init__.py  duration.py
tests/torch/dataset/: test_arrow_torch_dataset.py  test_stride_window_strategy.py
