[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
authors = [{ name = "Valery Ratsko", email = "<zitrasa@yandex.ru>" }]
description = "Baikal ML Repository"
name = "baikal-ml"
version = "0.3.0"
readme = "README.md"
requires-python = ">= 3.12, < 3.14"

dependencies = [
    "attrs (>= 25.0, < 26.0)",
    "baikal-common (>= 0.16, < 1.0)",
    "baikal-converters (>= 0.5, < 1.0)",
    "baikal-indicators (>= 0.2, < 1.0)",
    "dynaconf (>= 3.0, < 4.0)",
    "numpy (>= 2.0, < 3.0)",
    "polars (>= 1.0, < 2.0)",
    "pyarrow (>= 20.0, < 21.0)",
]

[project.optional-dependencies]
cpu = ["torch (>= 2.0, < 3.0)"]
cuda-12-8 = ["torch (>= 2.0, < 3.0)"]
cuda-12-9 = ["torch (>= 2.0, < 3.0)"]

[tool.poetry]

exclude = [
    "src/baikal/*.py"  # Explicitly exclude all python files from baikal namespace package
]

packages = [
    { include = "baikal", from = "src" }
]

[tool.poetry.dependencies]
baikal-common = { source = "baikal-pypi" }
baikal-converters = { source = "baikal-pypi" }
baikal-indicators = { source = "baikal-pypi" }

torch = [
    { source = "pytorch-cpu", markers = "extra == 'cpu' and extra != 'cuda-12-8' and extra != 'cuda-12-9'" },
    { source = "pytorch-cuda-12-8", markers = "extra != 'cpu' and extra == 'cuda-12-8' and extra != 'cuda-12-9'" },
    { source = "pytorch-cuda-12-9", markers = "extra != 'cpu' and extra != 'cuda-12-8' and extra == 'cuda-12-9'" }
]

# Semantic Release Settings

[tool.semantic_release]
tag_format = "{version}"
version_toml = ["pyproject.toml:project.version"]

allow_zero_version = true
# When you are ready to release a stable version, set to true and run Python Semantic Release again.
major_on_zero = false

build_command = 'pip install "poetry >= 2.0" "rust-just >= 1.0" && just init-release && just build'
build_command_env = ["NEXUS_READ_USER", "NEXUS_READ_PASS"]

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

# Private PyPI Source

[[tool.poetry.source]]
name = "baikal-pypi"
priority = "explicit"
url = "https://pypi.fury.io/zitrasa/"

# Torch Wheels Sources

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda-12-8"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda-12-9"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

# Dependency Groups

[tool.poetry.group.dev.dependencies]
ipympl = "^0.9"
ipywidgets = "^8.0"
matplotlib = "^3.0"
notebook = "^7.0"
rich = { version = "^13.0", extras = ["jupyter"] }

[tool.poetry.group.lint.dependencies]
mypy = "^1.0"
ruff = "^0.9"

pyarrow-stubs = "^20.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-datadir = "^1.0"

# Linter Tools

[tool.ruff.lint]
ignore = ["E203", "E501", "E701"]
select = [
    "E", "F", "W", "C90", "I", "UP", "ANN2", "ASYNC", "BLE", "FBT", "B", "A", "C4", "DTZ",
    "EM", "ISC", "PYI", "PT", "RSE", "RET", "SLF", "SIM", "TID", "PTH", "PLE1", "TRY"
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["baikal.*", "tests.*"]
lines-between-types = 1

[tool.mypy]
exclude = [".venv"]
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["torch.utils.*"]
ignore_missing_imports = true

# Testing Tools

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--tb=short"]
testpaths = ["tests"]
